# conway-s-game-of-life

./: CMakeLists.txt  Simulation.cpp  grid.cpp  grid.h  main.cpp  simulation.h
